name: Steganography
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
maintainer: alps@ecomp.poli.br
author: adoniasluna

executable Steganography
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        Crypto -any,
        cryptonite >=0.24,
        memory -any
    default-language: Haskell2010
    hs-source-dirs: src
